<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myBlack"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvPnlInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/myWhite"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/myBlack"
        android:gravity="end|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_7"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_9"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/Division"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/Multiplication"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_3"/>
        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/Substraction"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:layout_margin="4dp"
            android:onClick="onDigit"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_0"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onDecimalPoint"
            android:backgroundTint="@color/myBlue"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/_dot"/>

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onOperator"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/Addition"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.2"
            android:layout_margin="4dp"
            android:onClick="onEqual"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/Equal"/>
        <Button
            android:id="@+id/btnCe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:onClick="onClear"
            android:backgroundTint="@color/myPink"
            android:textSize="30sp"
            android:textColor="@color/myWhite"
            android:text="@string/ce"/>
    </LinearLayout>

</LinearLayout>